Fix mismatched identifier in entry type selector

--- a/src/templates/_includes/forms/entryType.twig
+++ b/src/templates/_includes/forms/entryType.twig
@@ -4,7 +4,7 @@
     slideout.on('submit', ev => {
         createOption({
             text: ev.data.name,
-            value: ev.data.handle,
+            value: ev.data.id,
         });
     });
     slideout.on('close', () => {
