--- a/src/templates/settings/filesystems/_edit.twig
+++ b/src/templates/settings/filesystems/_edit.twig
@@ -71,12 +71,12 @@
             name: 'hasUrls',
             id: 'has-urls',
             on:   filesystem.hasUrls,
-            toggle: filesystem.getShowUrlSetting() ? "url-field-wrapper" : null
+            toggle: filesystem.getShowUrlSetting() ? "url-field-container" : null
         }) }}
     {% endif %}
 
     {% if filesystem.getShowUrlSetting() %}
-        <div id="url-field-wrapper" class="{% if not filesystem.hasUrls %}hidden{% endif %}">
+        <div id="url-field-container" class="{% if not filesystem.hasUrls %}hidden{% endif %}">
             {{ forms.autosuggestField({
                 label: "Base URL"|t('app'),
                 instructions: "The base URL to the files in this filesystem."|t('app'),
