--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2804,8 +2804,16 @@ $elementInnerSpacing: 5px;
         flex-shrink: 0;
         pointer-events: none;
         border-radius: var(--small-border-radius);
+      }
+
+      img {
         max-width: 100%;
         max-height: 100%;
+      }
+
+      svg {
+        width: 100%;
+        height: 100%;
       }
 
       &.rounded {
