--- a/src/templates/settings/entry-types/_index.twig
+++ b/src/templates/settings/entry-types/_index.twig
@@ -34,9 +34,13 @@
     url: entryType.getCpEditUrl(),
     name: entryType.name|t('site')|e,
     handle: entryType.handle,
-    sections: (sectionsByEntryType[entryType.id] ?? [])|map(s => tag('a', {
-        text: s.name,
-        href: s.getCpEditUrl(),
+    usages: (entryTypeUsages[entryType.id] ?? [])|map(usage => tag('a', {
+        text: usage[1],
+        href: usage[2],
+        class: 'iconlink',
+        data: {
+            icon: usage[0],
+        }
     }))|join(', '),
 }) %}
 
@@ -44,7 +48,7 @@
 var columns = [
     { name: '__slot:title', title: Craft.t('app', 'Name') },
     { name: '__slot:handle', title: Craft.t('app', 'Handle') },
-    { name: 'sections', title: Craft.t('app', 'Used by') },
+    { name: 'usages', title: Craft.t('app', 'Used by') },
 ];
 
 new Craft.VueAdminTable({
