--- a/src/templates/_includes/forms/button.twig
+++ b/src/templates/_includes/forms/button.twig
@@ -17,7 +17,7 @@
         'failure-message': failureMessage,
         'retry-message': retryMessage,
         'success-message': successMessage,
-    }
+    }|merge(attributes.data ?? {}),
 }|merge(attributes ?? {}) -%}
 
 {% apply spaceless %}
