--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -1182,7 +1182,7 @@ td.right {
   margin: 3px;
 }
 
-.customize-sources-table-column {
+.checkbox-select-item {
   display: flex;
   align-items: flex-start;
   align-content: stretch;
