--- a/src/templates/_elements/tableview/elements.twig
+++ b/src/templates/_elements/tableview/elements.twig
@@ -33,7 +33,6 @@
         {% for attribute in attributes %}
             {% if loop.first %}
                 {% tag 'th' with {
-                    class: not (showHeaderColumn ?? true) ? 'hidden' : null,
                     data: {
                         title: attribute[1].label,
                         titlecell: '',
@@ -54,10 +53,14 @@
                             %}" title="{{ 'Show/hide children'|t('app') }}" aria-label="{{ toggleLabel }}"
                             aria-expanded="{{  element.id not in collapsedElementIds ? 'true' : 'false' }}"></button>
                         {% endif %}
-                        {{ elementChip(element, {
-                            context: context ?? 'index',
-                            autoReload: false,
-                        }) }}
+                        {% set chip = elementChip(element, {
+                          context: context ?? 'index',
+                          autoReload: false,
+                        }) %}
+                        {% if not (showHeaderColumn ?? false) %}
+                            {% set chip = chip|attr({class: 'hidden'}) %}
+                        {% endif %}
+                        {{ chip|raw }}
 
                         {%- if structure %}
                             {% set textAlternative = 'Level {num}'|t('app', {
