--- a/src/templates/settings/fields/index.twig
+++ b/src/templates/settings/fields/index.twig
@@ -42,7 +42,7 @@
     {% set tableData = tableData|merge([{
         id: field.id,
         title: field.name|t('site'),
-        translatable: field.getIsTranslatable() ? (field.getTranslationDescription() ?? 'This field is translatable.'|t('app')),
+        translatable: field.getIsTranslatable(null) ? (field.getTranslationDescription(null) ?? 'This field is translatable.'|t('app')),
         searchable: field.searchable ? true : false,
         url: url('settings/fields/edit/' ~ field.id),
         handle: field.handle,
