--- a/src/templates/_includes/forms/datetime.twig
+++ b/src/templates/_includes/forms/datetime.twig
@@ -6,6 +6,7 @@
     {% include '_includes/forms/time' with {
         hasOuterContainer: true,
         isDateTime: true,
+        outputLocaleParam: false,
         outputTzParam: false,
     } %}
 </div>
