--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -38,6 +38,15 @@
     options: fsOptions
 }) }}
 
+{{ forms.textField({
+    label: 'Filesystem Subpath'|t('app'),
+    instructions: 'Where assets should be stored on the filesystem.'|t('app'),
+    id: 'fsSubpath',
+    name: 'fsSubpath',
+    value: volume.fsSubpath,
+    errors: volume.getErrors('fsSubpath'),
+}) }}
+
 {{ forms.fsField({
     label: 'Transform Filesystem'|t('app'),
     instructions: 'Choose which filesystem image transforms should be stored in.'|t('app'),
