drop environment variable support for subpath

--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -43,7 +43,7 @@
     instructions: 'Where assets should be stored on the filesystem.'|t('app'),
     id: 'subpath',
     name: 'subpath',
-    value: volume.subpath,
+    value: volume.getSubpath(false),
     errors: volume.getErrors('subpath'),
 }) }}
 
