--- a/src/templates/_special/missing-component.twig
+++ b/src/templates/_special/missing-component.twig
@@ -13,9 +13,9 @@
                 <h3>{{ name }}</h3>
                 {% if isComposerInstalled %}
                     {% if isInstalled %}
-                        <button type="button" class="btn formsubmit" data-form="x" data-action="plugins/enable-plugin" data-param="pluginHandle" data-value="{{ handle }}">{{ 'Enable'|t('app') }}</button>
+                        <button type="button" class="btn formsubmit" data-formsubmit="x" data-action="plugins/enable-plugin" data-param="pluginHandle" data-value="{{ handle }}">{{ 'Enable'|t('app') }}</button>
                     {% else %}
-                        <button type="button" class="btn formsubmit" data-form="x" data-action="plugins/install-plugin" data-param="pluginHandle" data-value="{{ handle }}">{{ 'Install'|t('app') }}</button>
+                        <button type="button" class="btn formsubmit" data-formsubmit="x" data-action="plugins/install-plugin" data-param="pluginHandle" data-value="{{ handle }}">{{ 'Install'|t('app') }}</button>
                     {% endif %}
                 {% else %}
                     <a class="btn" href="{{ url('plugin-store/'~handle) }}">{{ 'Install'|t('app') }}</a>
