prevent long label in selectize field from overflowing

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -6794,6 +6794,15 @@ tr.indexingSession td.progress div.progressContainer div.progressInfo {
   border-color: inherit;
   box-shadow: none;
   background-color: transparent;
+
+  .item {
+    max-width: 100%;
+
+    span {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
 
 .selectize.select .selectize-input:after {
