--- a/src/templates/settings/fields/_edit.twig
+++ b/src/templates/settings/fields/_edit.twig
@@ -36,6 +36,7 @@
         value: field.name,
         errors: field.getErrors('name'),
         required: true,
+        autofocus: true,
     }) }}
 
     {{ forms.textField({
