--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -41,6 +41,7 @@
         name: 'name',
         value: section.name,
         errors: section.getErrors('name'),
+        autofocus: true,
         required: true,
     }) }}
 
