--- a/src/templates/_components/auth/googleauthenticator/setup.twig
+++ b/src/templates/_components/auth/googleauthenticator/setup.twig
@@ -13,7 +13,7 @@
 {% endif %}
 
 {% if currentMethod is not defined or currentMethod is empty %}
-    {% set currentMethod = 'craft\\auth\\type\\GoogleAuthenticator' %}
+    {% set currentMethod = 'craft\\auth\\twofa\\type\\GoogleAuthenticator' %}
 {% endif %}
 
 {% set isSetup = user.isAuthTypeSetup(currentMethod) %}
