--- a/src/templates/_components/auth/list.twig
+++ b/src/templates/_components/auth/list.twig
@@ -6,13 +6,13 @@
     {% do view.registerDeltaName('auth-2fa-setup') %}
 
     <div id="auth-2fa-setup">
-        {% set auth2faTypes = [] %}
-        {% set auth2faTypes = auth2faTypes|merge(craft.app.auth.getAll2faTypes(true)) %}
-        {% set auth2faTypes = auth2faTypes|merge(craft.app.auth.getWebAuthnType(true)) %}
-        {% if auth2faTypes is empty %}
-            <p class="zilch">{{ 'No 2FA options available.'|t('app') }}</p>
+        {% set authTypes = [] %}
+        {% set authTypes = authTypes|merge(craft.app.auth.getAll2faTypes(true)) %}
+        {% set authTypes = authTypes|merge(craft.app.auth.getAllPasskeysTypes(true)) %}
+        {% if authTypes is empty %}
+            <p class="zilch">{{ 'No authentication options available.'|t('app') }}</p>
         {% else %}
-            {% for key, option in auth2faTypes %}
+            {% for key, option in authTypes %}
                 {% set isSetup = option.config.requiresSetup == false or (option.config.requiresSetup and user.isAuthTypeSetup(key)) %}
 
                 <div class="auth-2fa-type">
