--- a/src/templates/_components/auth/webauthn/setup.twig
+++ b/src/templates/_components/auth/webauthn/setup.twig
@@ -12,7 +12,7 @@
 {% endif %}
 
 {% if currentMethod is not defined or currentMethod is empty %}
-    {% set currentMethod = 'craft\\auth\\type\\WebAuthn' %}
+    {% set currentMethod = 'craft\\auth\\passkeys\\type\\WebAuthn' %}
 {% endif %}
 
 <div class="field">
