--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -6221,6 +6221,10 @@ fieldset {
     .t9n-indicator {
       @include margin-left(7px);
       color: var(--light-text-color);
+
+      &.copyable {
+        cursor: pointer;
+      }
     }
 
     & + .instructions {
