swap form heading when switching search and support forms

--- a/src/templates/_components/widgets/CraftSupport/body.twig
+++ b/src/templates/_components/widgets/CraftSupport/body.twig
@@ -16,6 +16,7 @@
     <div id="cs-screen-{{ screen }}" class="cs-screen cs-screen-2 cs-screen-{{ screen }}" action="{{ formAction }}" method="get" target="_blank" rel="noopener">
         {{ tag('h2', {
             text: submitText,
+            class: 'cs-heading'
         }) }}
         {{ forms.textareaField({
             first: true,
