--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5699,6 +5699,10 @@ $min2ColWidth: 400px;
       @include margin-right(-20px);
     }
   }
+
+  div.elements {
+    list-style: none;
+  }
 }
 
 .dropdownsettingsmodal {
