--- a/src/templates/_includes/forms/editableTable.twig
+++ b/src/templates/_includes/forms/editableTable.twig
@@ -193,7 +193,7 @@
                                         } only %}
                                     {%- default -%}
                                         {% if static %}
-                                            <pre class="disabled">{{ value }}</pre>
+                                            <pre class="noteditable">{{ value }}</pre>
                                         {% else %}
                                             <textarea aria-labelledby="{{ headingId }}" aria-describedby="{{ describedBy }}" name="{{ cellName }}" rows="{{ col.rows ?? 1 }}"{% if col.placeholder is defined %} placeholder="{{ col.placeholder }}"{% endif %}>{{ value }}</textarea>
                                         {% endif %}
