--- a/src/templates/_includes/forms/lightswitch.twig
+++ b/src/templates/_includes/forms/lightswitch.twig
@@ -23,7 +23,7 @@
         indeterminate ? 'indeterminate' : null,
         small ? 'small' : null,
         toggle or reverseToggle ? 'fieldtoggle' : null,
-        disabled ? 'disabled' : null,
+        disabled ? 'noteditable' : null,
     ]|filter,
     data: {
         value: value != '1' ? value : false,
