--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -1513,6 +1513,15 @@ ul.icons {
   cursor: default;
 }
 
+.noteditable {
+  cursor: not-allowed;
+
+  .element,
+  & + .colorhex {
+    cursor: not-allowed;
+  }
+}
+
 .btn,
 .spinner {
   height: var(--ui-control-height);
@@ -2132,7 +2141,7 @@ div.btn.submit input {
   border-radius: 17px;
   padding: 0;
 
-  &:not(.static) {
+  &:not(.static):not(.noteditable) {
     cursor: pointer;
   }
 
@@ -6119,6 +6128,11 @@ fieldset {
     & + .instructions {
       margin: 5px 0 0;
     }
+
+    input:disabled,
+    textarea:disabled {
+      cursor: not-allowed;
+    }
   }
 
   & > .notice,
@@ -6239,13 +6253,7 @@ div.checkbox {
 
 input.checkbox:disabled + label,
 .disabled div.checkbox {
-  cursor: default;
-}
-
-input.checkbox:disabled + label,
-div.checkbox.disabled:before,
-div.checkbox.disabled + label {
-  opacity: 0.25;
+  cursor: not-allowed;
 }
 
 input.checkbox:checked + label:before,
@@ -6344,7 +6352,7 @@ div.radio {
 
 input.radio:disabled + label,
 .disabled div.radio {
-  cursor: default;
+  cursor: not-allowed;
 }
 
 input.radio + label:empty,
@@ -6383,12 +6391,6 @@ div.radio:after {
   transform: translateY(-50%);
   width: calc(var(--radio-size) - 8px);
   height: calc(var(--radio-size) - 8px);
-}
-
-input.radio:disabled + label,
-div.radio.disabled:before,
-div.radio.disabled + label {
-  opacity: 0.25;
 }
 
 input.radio:checked + label:after,
@@ -6789,6 +6791,15 @@ tr.indexingSession td.progress div.progressContainer div.progressInfo {
 }
 
 /* selectize reset */
+.selectize-control .selectize-input.disabled {
+  opacity: 1;
+  cursor: not-allowed !important;
+
+  * {
+    cursor: not-allowed !important;
+  }
+}
+
 .selectize .selectize-input {
   display: block;
   border-color: inherit;
