--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -642,6 +642,58 @@ button {
   }
 }
 
+.revision-notice {
+  display: flex;
+  align-items: center;
+  align-content: stretch;
+  justify-content: center;
+  gap: var(--s);
+  color: var(--gray-600);
+
+  #content-notice & {
+    display: inline-flex;
+    justify-content: flex-start;
+  }
+
+  p {
+    flex: 1;
+    margin: 0;
+  }
+
+  .revision-icon {
+    position: relative;
+    flex-shrink: 0;
+    width: 34px;
+    height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    border: 2px solid transparentize($grey800, 0.8);
+    box-sizing: border-box;
+    box-shadow: 0 1px 1px 1px var(--white);
+
+    &:before {
+      position: relative;
+      left: 1px;
+      color: var(--grey-800) !important;
+      font-size: 18px;
+    }
+
+    &:after {
+      content: '';
+      font-size: 0;
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      border-radius: 100%;
+      box-shadow: inset 0 2px 0 transparentize($blue900, 0.8);
+    }
+  }
+}
+
 /* toggles */
 button.toggle {
   appearance: none;
