--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -31,6 +31,7 @@
     url('../fonts/Craft.svg#Craft') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 /* ----------------------------------------
