--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -26,7 +26,8 @@
 
 @font-face {
   font-family: 'Craft';
-  src: url('../fonts/Craft.woff') format('woff'),
+  src: url('../fonts/Craft.woff2') format('woff2'),
+    url('../fonts/Craft.woff') format('woff'),
     url('../fonts/Craft.ttf') format('truetype'),
     url('../fonts/Craft.svg#Craft') format('svg');
   font-weight: normal;
